# mc_robot_tools

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
bota_sensor/: CMakeLists.txt
bota_sensor/rsdf/: wrapper.rsdf.in
bota_sensor/src/: CMakeLists.txt  bota_sensor.cpp  bota_sensor.h  config.in.h
bota_sensor/tests/: CMakeLists.txt
bota_sensor/xacro/: wrapper.urdf.xacro.in
camera/: CMakeLists.txt
camera/meshes/: Bracket D435 between UR5e and Robotiq RevA ICPS Adjuster for STL.STL  Bracket D435 between UR5e and Robotiq RevA ICPS Adjuster.STEP  IO_20Coupling_20UR_20CB_20190807 Dummy for STL.STL  bracket.stl  intel_realsense_d435_dummy.stl
camera/rsdf/: screw.rsdf
camera/src/: camera.cpp  camera.h  config.in.h
camera/tests/: CMakeLists.txt
camera/urdf/: camera.in.urdf
cmake/: RobotModule.cmake  install-3rd-party.cmake  mc_robot_toolsConfig.cmake.in  mc_rtc_macros.cmake
ds4/: CMakeLists.txt
ds4/rsdf/: ds4.rsdf
ds4/src/: CMakeLists.txt  ds4.cpp  ds4.h
ds4/tests/: CMakeLists.txt
ds4/urdf/: ds4.in.urdf
example/: CMakeLists.txt
example/src/: CMakeLists.txt  config.h.in  robotiq_arg85.h  robotiq_arg85.in.cpp
example/urdf/: robotiq_arg85.in.urdf
include/mc_robot_tools/: ConnectableRobotModule.h  mc_robot_tools.in.h
interfaces/: CMakeLists.txt
interfaces/call_m_camera_interface/: CMakeLists.txt
interfaces/call_m_camera_interface/convex/call_m_camera_interface/: call_m_camera_interface-ch.txt
interfaces/call_m_camera_interface/meshes/call_m_camera_interface/: call_m_camera_interface.stl
interfaces/call_m_camera_interface/rsdf/call_m_camera_interface/: call_m_camera_interface.rsdf
interfaces/call_m_camera_interface/src/: call_m_camera_interface.h  call_m_camera_interface.in.cpp  config.h.in
interfaces/call_m_camera_interface/urdf/: call_m_camera_interface.in.urdf
interfaces/call_m_camera_interface/yaml/: call_m_camera_interface.in.yaml
interfaces/palette_box/: CMakeLists.txt
interfaces/palette_box/alias/: palette_box.in.yaml
interfaces/palette_box/convex/palette_box/: palette_box-ch.txt
interfaces/palette_box/meshes/palette_box/: palette_box.stl
interfaces/palette_box/rsdf/palette_box/: palette_box.rsdf
interfaces/palette_box/urdf/: palette_box.in.urdf
interfaces/palette_box/yaml/: palette_box.in.yaml
interfaces/panda_prosthesis/: CMakeLists.txt
interfaces/panda_prosthesis/alias/: bonetag_femur.in.yaml  bonetag_tibia.in.yaml  brace_bottom_setup.in.yaml  brace_urdf.in.yaml
interfaces/panda_prosthesis/convex/bonetag_femur/: femur-ch.txt  support_femur-ch.txt
interfaces/panda_prosthesis/convex/bonetag_tibia/: support_tibia-ch.txt  support_tibia_coude-ch.txt  support_tibia_straight-ch.txt  tibia-ch.txt
interfaces/panda_prosthesis/etc/ForceSensorCalibration/: panda_brace_femur.yaml
interfaces/panda_prosthesis/src/: CMakeLists.txt  config.h.in  panda_brace_module.cpp
interfaces/panda_prosthesis/urdf/: bonetag_femur.in.urdf
interfaces/panda_prosthesis/yaml/: bonetag_femur.in.yaml  bonetag_tibia.in.yaml  brace_bottom_setup.in.yaml
interfaces/robotiq_arg85/: CMakeLists.txt
interfaces/robotiq_arg85/convex/robotiq_arg85/: inner_finger_coarse-ch.txt  inner_finger_fine-ch.txt  inner_knuckle_coarse-ch.txt  inner_knuckle_fine-ch.txt  outer_finger_coarse-ch.txt  outer_finger_fine-ch.txt  outer_knuckle_coarse-ch.txt  outer_knuckle_fine-ch.txt  robotiq_85_base_link_coarse-ch.txt  robotiq_85_base_link_fine-ch.txt
interfaces/robotiq_arg85/src/: robotiq_arg85.h  robotiq_arg85.in.cpp
interfaces/robotiq_arg85/urdf/: robotiq_arg85.in.urdf
plate/: CMakeLists.txt
plate/meshes/: plate.stl
plate/rsdf/: plate.rsdf
plate/src/: plate.cpp  plate.h
plate/tests/: CMakeLists.txt
plate/urdf/: plate.in.urdf
realsense_camera/: CMakeLists.txt
realsense_camera/rsdf/: realsense_d435.rsdf
realsense_camera/src/: realsense_camera.cpp  realsense_camera.h
realsense_camera/tests/: CMakeLists.txt
realsense_camera/urdf/: realsense_d435.in.urdf
robotiq_gripper/: CMakeLists.txt
robotiq_gripper/rsdf/: robotiq_2f_140_gripper.rsdf  robotiq_2f_85_gripper.rsdf
robotiq_gripper/src/: CMakeLists.txt  config.in.h  robotiq_gripper.cpp  robotiq_gripper.h
robotiq_gripper/tests/: CMakeLists.txt
robotiq_gripper/xacro/: robotiq_2f_140_gripper.urdf.xacro  robotiq_2f_85_gripper.urdf.xacro
screw/: CMakeLists.txt
screw/meshes/: screw.stl
screw/rsdf/: screw.rsdf
screw/src/: CMakeLists.txt  screw.cpp  screw.h
screw/tests/: CMakeLists.txt
screw/urdf/: screw.in.urdf
ssg48_gripper/: CMakeLists.txt
ssg48_gripper/rsdf/: ssg48_gripper.rsdf
ssg48_gripper/src/: ssg48_gripper.cpp  ssg48_gripper.h
ssg48_gripper/tests/: CMakeLists.txt
ssg48_gripper/xacro/: ssg48_gripper.urdf.xacro
tools/: CMakeLists.txt
tools/robotiq_arg85/: CMakeLists.txt
tools/robotiq_arg85/src/: CMakeLists.txt  robotiq_arg85.in.cpp
